# QICK_Qubit_LabSuite

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: README.md
configs/NEXUS/: measurement_config.json
configs/QUIET/: measurement_config.json
scripts/: analysis_comprehensive_TLS_v0.py  analysis_stark.py
scripts/processing/: README.md  analysis.py  analysis_comprehensive_TLS_v0.py
scripts/routines/: README.md  round_robin_benchmark.py
src/qicklab/: __init__.py
src/qicklab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qicklab/analysis/: AnalysisClass.py  README.md  __init__.py  ampRabi.py  amp_rabi.py  analysis_helper_TLS_comprehensive.py  auto_threshold.py  data_processing.py  data_tools.py  fit_functions.py  fit_tools.py  fitting.py  h5_data.py  plot_tools.py  plotting.py  qspec.py  resstarkspec.py  rspec.py  shot_tools.py  ssf.py  stark_tools.py  starkspec.py  t1.py
src/qicklab/config/: README.md  RoundRobinConfig.py  __init__.py  expt_config.py  round_robin_config.py  system_config.py
src/qicklab/datahandling/: DataAggregator.py  __init__.py  datafile_tools.py
src/qicklab/experiments/: measurements.py
src/qicklab/hardware/: __init__.py  build_state.py  build_task.py  qick_programs.py
src/qicklab/utils/: README.md  __init__.py  ana_utils.py  data_utils.py  file_helpers.py  file_utils.py  log_utils.py  time_utils.py  visdom_utils.py
tests/: analysis.py  round_robin.py
